# python-courses

./: README.md
flask-tdd-docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
flask-tdd-docker/src/: __init__.py
flask-tdd-docker/src/api/: __init__.py  ping.py  users.py
flask-tdd-docker/src/api/users/: views.py
flask-tdd-docker/src/tests/: conftest.py  test_ping.py  test_users.py  test_users_unit.py
taxi-react-app/server/: .gitignore  README.md  pyproject.toml
taxi-react-app/server/taxi/: asgi.py  middleware.py  routing.py  settings.py  urls.py
taxi-react-app/server/trips/: admin.py  consumers.py  models.py  serializers.py  views.py
taxi-react-app/server/trips/migrations/: 0001_initial.py  0002_trip.py  0003_trip_driver_rider.py  0004_user_photo.py
taxi-react-app/server/trips/tests/: test_http.py  test_websocket.py
web-framework/: README.md  api.py  pyproject.toml
