[tool.poetry]
name = "flask-tdd-docker"
version = "0.1.0"
description = ""
authors = ["Xiang Chen <xiangchenchen96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
flask-restx = "^0.5.1"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
black = "^21.9b0"
pre-commit = "^2.15.0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["src/tests/*"]
branch = true

[tool.isort]
profile = "black"
multi_line_output = 3