[tool.poetry]
name = "taxi-react-app"
version = "0.1.0"
description = ""
authors = ["Xiang Chen <xiangchenchen96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
channels = "^3.0.4"
channels-redis = "^3.3.1"
psycopg2-binary = "^2.9.1"
djangorestframework-simplejwt = "^4.8.0"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]
pytest-django = "^4.4.0"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "taxi.settings"
